# vandedok_cayley_toolkit

./: README.md
cubing.js/: README.md  get_puzzles_names.js  puzzle-geometry-all-json.ts
puzzle_generators/pyraminx_tertraminx/: pyraminx.gap  pyraminx.ksolve  tetraminx.gap  tetraminx.ksolve
python/: pyproject.toml
python/vandedok_cayley_toolkit/: __init__.py  cayleypy_utils.py  gap_utils.py  general_utils.py  graph_spectrum.py  graphs_utils.py  matplotlib_utils.py  run_puzzle.py
python/vandedok_cayley_toolkit/ml/: __init__.py  cfg.py  eval.py  exp_saver.py  losses.py  run.py  train.py  utils.py  visualize.py
python/vandedok_cayley_toolkit/r2/: __init__.py  sync.py
python/vandedok_cayley_toolkit/s3/: __init__.py  size.py  sync.py
