[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "vandedok_cayley_toolkit"
version = "0.1.0"
description = "Toolkit for styding cayley graphs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Anton Naumov" }]


# https://peps.python.org/pep-0508/
dependencies = [
    "numpy",
    "scipy",
    "networkx",
]


[tool.pylint."FORMAT"]
max-line-length = 160

[tool.black]
line-length = 160
